--- a/1.2
+++ b/1.2
@@ -1,4 +1,4 @@
-local HWIDTable = loadstring(game:HttpGet("https://raw.githubusercontent.com/MinecraftTester5151/Www/main/white%20man"))()
+local HWIDTable = loadstring(game:HttpGet("https://raw.githubusercontent.com/MinecraftTester5151/wesa/main/wesa"))()
 local HWID = game:GetService("RbxAnalyticsService"):GetClientId()
 
 for i,v in pairs(HWIDTable) do
