--- a/1.2
+++ b/1.2
@@ -7,7 +7,7 @@ for i,v in pairs(HWIDTable) do
         
         else
             
-        game.Players.LocalPlayer:Kick("Not Whitelisted")
+        game.Players.LocalPlayer:Kick("script is currentley down :(")
         
     end
 end
